--- a/dashboard/src/Components/TopCompanies.css
+++ b/dashboard/src/Components/TopCompanies.css
@@ -42,6 +42,12 @@
   justify-content: space-between;
   height: 100%;
 }
+
+
+.company-card.selected {
+  background-color: #f0f0f0;
+}
+
 @keyframes marquee {
   0% {
     transform: translateX(0);
